@@ -8,9 +8,13 @@
                  [ring/ring-jetty-adapter "0.3.6"]
                  [hiccup "0.3.4"]
                  [clj-time "0.3.0-SNAPSHOT"]
+                 [borneo "0.1.0"]
                  [incanter "1.2.3"]]
   :dev-dependencies [[swank-clojure "1.3.0-SNAPSHOT"]]
   :warn-on-reflection true
   :main dredd.core
   :jvm-opts ["-Dfile.encoding=utf-8"
-             "-Dswank.encoding=utf-8"])
+             "-Dswank.encoding=utf-8"
+             "-Xms256m"
+             "-Xmx512m"
+             "-XX:MaxPermSize=256m"])
